<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/photoDescriptionSubjectType"
        android:textSize="20dp" />

    <Spinner android:id="@+id/subjectSelectType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Spinner>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/photoDescriptionSubjectName"
        android:textSize="20dp" />

    <AutoCompleteTextView android:id="@+id/subjectName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/photoDescriptionSubmitButton"/>

</LinearLayout>